--- a/python-pho-whispher/requirements.txt
+++ b/python-pho-whispher/requirements.txt
@@ -1,45 +1,31 @@
-audioread==3.0.1
-audiosegment==0.23.0
+altgraph @ file:///AppleInternal/Library/BuildRoots/626bfa9c-8221-11ef-b9bf-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
-decorator==5.1.1
 filelock==3.16.1
-fsspec==2024.9.0
-huggingface-hub==0.26.0
+fsspec==2024.10.0
+future @ file:///AppleInternal/Library/BuildRoots/626bfa9c-8221-11ef-b9bf-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+huggingface-hub==0.26.2
 idna==3.10
 Jinja2==3.1.4
-joblib==1.4.2
-lazy_loader==0.4
-librosa==0.10.2.post1
-llvmlite==0.43.0
+macholib @ file:///AppleInternal/Library/BuildRoots/626bfa9c-8221-11ef-b9bf-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==3.0.2
 mpmath==1.3.0
-msgpack==1.1.0
-networkx==3.4.1
-numba==0.60.0
+networkx==3.2.1
 numpy==2.0.2
 packaging==24.1
-platformdirs==4.3.6
-pooch==1.8.2
 pycparser==2.22
-pydub==0.25.1
 PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.2.0
+six @ file:///AppleInternal/Library/BuildRoots/626bfa9c-8221-11ef-b9bf-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 soundfile==0.12.1
-soxr==0.5.0.post1
 sympy==1.13.1
-threadpoolctl==3.5.0
 tokenizers==0.20.1
 torch==2.5.0
-tqdm==4.66.5
+tqdm==4.67.0
 transformers==4.45.2
 typing_extensions==4.12.2
 urllib3==2.2.3
-webrtcvad==2.0.10
 websockets==13.1
